# tonic-envoy-shop

./: Makefile  README.md  docker-compose.yml  update_protos.sh
database/orders/: Dockerfile  init.sql
database/users/: init.sql
envoy/: envoy.yaml
services/auth/: Dockerfile  go.mod  main.go
services/orders/: Cargo.toml  Dockerfile  README.md  build.rs
services/orders/src/: lib.rs  main.rs  model.rs  rpc.rs  user_client.rs
services/users/: .dockerignore  Cargo.toml  Dockerfile  README.md  dev.Dockerfile
services/users/proto/: orders.proto  users.proto
services/users/src/: db.rs  lib.rs  main.rs  model.rs  rpc.rs
