[package]
name = "users"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.7"
prost = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
sqlx = {version = "0.5", features = ["runtime-tokio-rustls", "postgres"]}

[build-dependencies]
tonic-build = "0.7"